Basic Project Skeleton

--- a/capstone/capstone/Base.lproj/Main.storyboard
+++ b/capstone/capstone/Base.lproj/Main.storyboard
@@ -209,6 +209,30 @@
             </objects>
             <point key="canvasLocation" x="8641" y="822"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="AmH-tx-DKe">
+            <objects>
+                <viewController id="t5q-6Z-cmb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qfy-4X-vcl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Saved Articles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WuE-yl-QgM">
+                                <rect key="frame" x="52" y="79" width="311" height="98"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0Gj-uJ-j3z"/>
+                        <color key="backgroundColor" red="0.93882567309999998" green="0.97394164800000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HiJ-Xs-lXa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9357.971014492754" y="821.65178571428567"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="cXd-TS-ZuP">
             <objects>
@@ -216,6 +240,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="KdC-kX-aNt"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0Tw-RS-k70">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -230,11 +255,11 @@
             </objects>
             <point key="canvasLocation" x="2671" y="-895"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="3A8-rj-17G">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="47b-2a-rIb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="IdU-fP-Xdp"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="IdU-fP-Xdp"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dXW-qA-Vn6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -249,11 +274,11 @@
             </objects>
             <point key="canvasLocation" x="2084" y="49"/>
         </scene>
-        <!--Item-->
+        <!--Skincare-->
         <scene sceneID="ctP-x9-T6b">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kj0-cT-4Vo" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="M4m-HI-Vcq"/>
+                    <tabBarItem key="tabBarItem" title="Skincare" id="M4m-HI-Vcq"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="iYE-4E-sUf">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -268,11 +293,11 @@
             </objects>
             <point key="canvasLocation" x="3962" y="49"/>
         </scene>
-        <!--Item-->
+        <!--Filters-->
         <scene sceneID="FTZ-vq-bnp">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kgb-eV-d2E" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Q61-aV-3E6"/>
+                    <tabBarItem key="tabBarItem" title="Filters" id="Q61-aV-3E6"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="89H-Np-QPd">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -287,11 +312,11 @@
             </objects>
             <point key="canvasLocation" x="5943" y="67"/>
         </scene>
-        <!--Item-->
+        <!--Account-->
         <scene sceneID="Lya-oK-OXk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Yv1-NG-YQE" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="JQD-7e-hqe"/>
+                    <tabBarItem key="tabBarItem" title="Account" id="JQD-7e-hqe"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ND5-r7-GXu">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
